[package]
name = "rlox-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlox-contract = { path = "../rlox-contract" }
rlox-scanner  = { path = "../rlox-scanner"  }
rlox-parser  = { path = "../rlox-parser"  }

clap = "2.33.3"
simplelog = "0.10.0"