[package]
name = "rlox-interpreter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlox-contract = { path = "../rlox-contract" }
rlox-scanner  = { path = "../rlox-scanner"  }
rlox-parser  = { path = "../rlox-parser"  }
log = "0.4.14"